unpackaged/main/default/objects/Member1__c/Member1__c.object-meta.xml
<CustomObject>
    <label>Member1</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>