unpackaged/main/default/objects/Member1__c/fields/Membership_Types__c.field-meta.xml
<CustomField>
    <fullName>Membership_Types__c</fullName>
    <label>Membership Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>