unpackaged/main/default/objects/Member1__c/fields/Preferred_Workout_Times__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Workout_Times__c</fullName>
    <label>Preferred Workout Times</label>
    <type>TextArea</type>
</CustomField>